--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -1,4 +1,4 @@
-@import './color-string-constants.scss';
+@import '../../stylesheets/color-string-constants.scss';
 .Player{
     height: 20%;
     width: 99%;
